# image_browser

./: .coverage  CLAUDE.md  Makefile  README.md  pyproject.toml
image_browser/: __init__.py  __main__.py
image_browser/templates/: index.html  thumbnail_viewer.html
tests/: test_image_browser.py
